Revert usage of inline-block due to wrapping issue

--- a/components/stretchtext.module.css
+++ b/components/stretchtext.module.css
@@ -1,17 +1,3 @@
-.tense {
-  background: rgba(247, 147, 2, 0.2);
-  border-radius: 4px;
-  margin: 0px -2px;
-  padding: 0px 2px;
-  /* shrink-able text */
-  display: inline-block;
-  text-align: left;
-  vertical-align: bottom;
-  white-space: nowrap;
-  overflow: hidden;
-  max-width: 100%;
-}
-
 .container a,
 .container a:hover,
 .container a:active,
@@ -19,26 +5,25 @@
   color: var(--secondary-foreground-color);
 }
 
+.tense {
+  background: rgba(247, 147, 2, 0.2);
+  border-radius: 4px;
+  margin: 0px -2px;
+  padding: 0px 2px;
+}
+
 .container a.shrinking,
 .container a:hover.shrinking,
 .container a:active.shrinking,
 .container a:visited.shrinking {
-  max-width: 0px;
   color: rgba(0, 0, 0, 0);
   background-color: inherit;
 }
 
-.loose {
-  /* shrink-able text */
-  display: inline-block;
-  text-align: left;
-  vertical-align: bottom;
-  white-space: nowrap;
-  overflow: hidden;
-  max-width: 100%;
+.expanding {
+  color: rgba(0, 0, 0, 0);
 }
 
-.expanding {
-  max-width: 0px;
-  color: rgba(0, 0, 0, 0);
+.loose {
+  color: inherit;
 }
